[package]
name = "pricefeeder"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
], default-features = false }
chrono = "0.4.38"
jsonwebtoken = "9"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
actix-web = "4.9.0"
actix-ws = "0.3.0"
serde = { version = "1", features = ["derive"] }
humantime = "2.1.0"

# Solana versioning magic
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", branch = "master", features = [
    "no-entrypoint",
    "client",
] }
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-lang = "0.29.0"
solana-sdk = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-account-decoder = ">=1.14, <1.17"
solana-transaction-status = ">=1.14, <1.17"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-client = "0.7.0"
spl-memo = "4.0.0"
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
anyhow = "1.0.32"
rand = "0.7.3"
hex = "0.4.3"
configparser = "3.0.0"
serde_json = { version = "1.0.78" }
arrayref = "0.3.7"
bs58 = { version = "0.5.0" }
bincode = { version = "1.3.3" }
regex = "1"
colorful = "0.2.2"
futures = "0.3.31"
aes-gcm = "0.10.3"

# Patch for curve25519-dalek to combine solana-programm with sqlx, becuase solana-program uses 2 years old version
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
